# yumi_demos

./: .gitignore  README.md
balancing_grasping/: .dir-locals.el  CMakeLists.txt  package.xml
balancing_grasping/config/: exp_tasks.yaml  exp_tasks_full.yaml  exp_tasks_online.yaml  exp_tasks_sim.yaml  yumi_controllers.yaml  yumi_limits_preload.yaml
balancing_grasping/include/balancing_grasping/: exp_balancing.h
balancing_grasping/launch/: controller_state.perspective  experiment_online.launch  experiment_sim.launch  wts_sensors.launch  yumi.rviz
balancing_grasping/log/: README
balancing_grasping/src/: exp_balancing.cpp
balancing_grasping/urdf/: balancing_grasping.urdf.xacro
demo_grasping/: CMakeLists.txt  package.xml
demo_grasping/hqp_tasks/: task_definitions.yaml
demo_grasping/include/demo_grasping/: demo_grasping.h
demo_grasping/launch/: demo.rviz  demo_grasping_gazebo.launch  demo_grasping_online.launch  demo_grasping_yumi_vel_control.launch  hiqp.launch  yumi_vel_control.launch
demo_grasping/scripts/: setDualGraspApproach.sh  setEECylinder.sh  setEEPlane.sh  setEETiltedPlanes.sh  setLeftExtract.sh  setLeftGraspApproach.sh  setRightExtract.sh  setRightGraspApproach.sh  setStartConfiguration.sh  setStartNoLimits.sh
demo_grasping/src/: demo_grasping.cpp  look_what_i_found.cpp
demo_teleop/: CMakeLists.txt  package.xml
demo_teleop/config/: yumi_both_fulldof.yaml  yumi_left_assisted.yaml  yumi_left_fulldof.yaml
demo_teleop/include/demo_teleop/: demo_teleop.h
demo_teleop/launch/: demo.launch  demo_online.launch  yumi.rviz
demo_teleop/src/: .demo_teleop.cpp.swp  demo_teleop.cpp  teleop_remapper.cpp
yumi_demo_launch/: CMakeLists.txt  package.xml
yumi_demo_launch/launch/: asus_cal.launch  asus_yumi.launch  kinect_yumi.launch  yumi_online_hiqp.launch  yumi_online_hiqp_moveit.launch  yumi_online_hqp.launch  yumi_simulation_hiqp.launch  yumi_simulation_hqp.launch
yumi_demo_launch/urdf/: kinect_mount.urdf.xacro  kinect_mount.xacro
