<?xml version="1.0"?>
<package>
  <name>demo_grasping</name>
  <version>0.0.1</version>
  <description>The demo_grasping package</description>

  <maintainer email="robert.krug@oru.se">rkg</maintainer>
  <maintainer email="ksatyaki@gmail.com">Chittaranjan Srinivas Swaminathan</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hiqp_ros</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>cmake_modules</build_depend> 
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>grasp_planner</build_depend>
  <build_depend>yumi_hw</build_depend>


  <run_depend>hiqp_ros</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>grasp_planner</run_depend>
  <run_depend>yumi_hw</run_depend>

  <export>
  </export>
  
</package>
